tests/fixtures/invalid/assert-4.py
assert 1 == 1
assert 2 == 2
assert 3 == 3

pass
assert 1 == 1

if 1 == 1:
    pass
assert 1 == 1
